# etl_foot_worldcup

./: .gitignore  main.py  pyproject.toml
config/: db_config.yaml
data_clean/: matches_1930_2014_clean.csv  matches_1930_2014_clean.parquet  matches_1930_2014_qualif_clean.csv  matches_1930_2014_qualif_clean.parquet  matches_1930_2022_clean.csv  matches_1930_2022_clean.parquet  matches_2014_clean.csv  matches_2014_clean.parquet  matches_2014_finals_clean.csv  matches_2014_finals_clean.parquet  matches_2018_clean.csv  matches_2018_clean.parquet  matches_2022_clean.csv  matches_2022_clean.parquet
docs/: etl_load_mysql_explained.md  etl_overview.md  etl_transform_explained.md  extract_final_results_2022.md  fonction_clean_team_name.md  kpi.md  main_explained.md  pd_concat_two_columns.md  regex.md  reserved_sql_keywords_and_use_of_backticks.md  useful_commandes_bash.md
env_etl_data_foot/: pyvenv.cfg
etl/: extract.py  load_mysql.py  transform.py
livrable/: pipeline_tikz.tex  rapport.tex
notebooks/: 01_exploration_cleaning_1930_2014.ipynb  01_exploration_cleaning_1930_2014.md  01_exploration_cleaning_1930_2014_v2.ipynb  01_exploration_cleaning_1930_2014_v2.md  02_exploration_cleaning_2018.ipynb  02_exploration_cleaning_2018.md  03_exploration_cleaning_2022.ipynb  03_exploration_cleaning_2022.md  04_merge_clean_datasets.ipynb  04_merge_clean_datasets.md  05_visualisation_kpi.ipynb
sql/: schema.sql
tests/: test_etl.py
