[project]
name = "etl-foot-worldcup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "ipykernel>=6.0",
    "matplotlib>=3.10",
    "pandas>=2.0",
    "seaborn>=0.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=tests --cov-report=term-missing --cov-report=html:htmlcov"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tests"]
omit = ["tests/test_cleaning.py", "tests/test_etl.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
